--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ qualified-headings: false
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+body {
   font-family: "Outfit", serif;
 }
 img {
